# domino-library

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml  ci.yml
src/: CMakeLists.txt
src/cv/: cv_main.cpp  cv_main.hpp
src/domino/: DataDomino.hpp  DomDoor.cpp  DomDoor.hpp  Domino.cpp  Domino.hpp  FreeHdlrDomino.hpp  HdlrDomino.hpp  MultiHdlrDomino.hpp  PriDomino.hpp  RmEvDom.hpp  UniData.hpp  UniPtr.hpp  WbasicDatDom.hpp
src/log/: BaseSL.hpp  CellLog.cpp  CellLog.hpp  CppLog.cpp  CppLog.hpp  StrCoutFSL.hpp  UniBaseLog.hpp  UniCoutLog.cpp  UniCoutLog.hpp  UniLog.cpp  UniLog.hpp  UniSmartLog.cpp  UniSmartLog.hpp
src/main_rouser/: MainRouser.hpp
src/msg_self/: MsgSelf.cpp  MsgSelf.hpp
src/obj_anywhere/: DataStore.hpp  ObjAnywhere.cpp  ObjAnywhere.hpp
src/queue/: MtInQueue.cpp  MtInQueue.hpp  MtQueue.cpp  MtQueue.hpp
src/safe_mem/: SafeAdr.hpp  SafePtr.hpp  SafeStr.hpp  SafeString.hpp  UniPtr.hpp
src/thread/: AsyncBack.cpp  AsyncBack.hpp  MT_Notifier.cpp  MT_Notifier.hpp  MT_PingMainTH.cpp  MT_PingMainTH.hpp  MT_Semaphore.cpp  MT_Semaphore.hpp  MtInQueue.cpp  MtInQueue.hpp  MtInQueueWithDom.hpp  ThPoolBack.cpp  ThPoolBack.hpp  ThreadBack.cpp  ThreadBack.hpp  ThreadBackViaMsgSelf.hpp  mt_notify.cpp  mt_notify.hpp
src/thread_back/: MT_Semaphore.cpp  MT_Semaphore.hpp  ThreadBack.cpp  ThreadBack.hpp
template/: remote.yaml  remote_114.yaml  remote_33.yaml
tools/: dom_gantt.py
ut/: CMakeLists.txt  main.cpp
ut/cv/: cvMainThreadTest.cpp
ut/domino/: DataDominoTest.cpp  DomDoorTest.cpp  DominoTest.cpp  FreeHdlrDominoTest.cpp  HdlrDominoTest.cpp  MultiHdlrDominoTest.cpp  PriDominoTest.cpp  RmEvDomTest.cpp  WbasicDatDomTest.cpp
ut/gcovr/: gcovr.cfg
ut/log/: CellLogTest.cpp  UniCoutLogTest.cpp  UniLogTest.cpp  UniLogTest.hpp  UniSmartLogTest.cpp
ut/main/: main.cpp
ut/msg_self/: MsgSelfTest.cpp
ut/obj_anywhere/: DataStoreTest.cpp  ObjAnywhereTest.cpp  UtInitObjAnywhere.hpp
ut/queue/: MtInQueueTest.cpp  MtQueueTest.cpp
ut/safe_mem/: SafeAdrTest.cpp  SafePtrTest.cpp  SafeStrTest.cpp  SafeStringTest.cpp
ut/thread/: AsyncBackTest.cpp  MT_NotifierTest.cpp  MT_SemaphoreTest.cpp  MT_SemphoreTest.cpp  MtInQueueTest.cpp  ThPoolBackTest.cpp  ThreadBackTest.cpp  ThreadBackTest.hpp
ut/thread_back/: MT_SemphoreTest.cpp  ThreadBackTest.cpp
